add separate db for each service

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=product-service
 
 server.port=8081
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/product_service_db
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=Filip
+spring.datasource.password=
