--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=order-service
 
 server.port=8083
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/order_service_db
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=Filip
+spring.datasource.password=
