--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=user-service
 
 server.port=8082
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/user_service_db
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=Filip
+spring.datasource.password=
