--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=user-service
 
 server.port=8082
 
+spring.jpa.hibernate.ddl-auto=update
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/user_service_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=Filip
