set up rabbitmq; publish message on new order

--- a/microservices-example/product-service/src/main/resources/application.properties
+++ b/microservices-example/product-service/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/product_service_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=Filip
 spring.datasource.password=
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
