--- a/microservices-example/pom.xml
+++ b/microservices-example/pom.xml
@@ -25,6 +25,8 @@
     <modules>
         <module>user-service</module>
         <module>product-service</module>
+        <module>user-service</module>
+        <module>common</module>
     </modules>
 
 </project>
