--- a/microservices-example/product-service/src/main/resources/application.properties
+++ b/microservices-example/product-service/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=5
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
