--- a/microservices-example/order-service/src/main/resources/application.properties
+++ b/microservices-example/order-service/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+microservices.product-service.url=http://localhost:8081
+microservices.user-service.url=http://localhost:8082
