--- a/microservices-example/pom.xml
+++ b/microservices-example/pom.xml
@@ -25,7 +25,7 @@
     <modules>
         <module>user-service</module>
         <module>product-service</module>
-        <module>user-service</module>
+        <module>order-service</module>
         <module>common</module>
     </modules>
 
