add api gateway and eureka server

--- a/microservices-example/order-service/src/main/resources/application.properties
+++ b/microservices-example/order-service/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.rabbitmq.password=guest
 
 microservices.product-service.url=http://localhost:8081
 microservices.user-service.url=http://localhost:8082
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
