--- a/microservices-example/product-service/src/main/resources/application.properties
+++ b/microservices-example/product-service/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.rabbitmq.password=guest
 spring.rabbitmq.listener.simple.retry.enabled=true
 spring.rabbitmq.listener.simple.retry.max-attempts=5
 spring.rabbitmq.listener.simple.default-requeue-rejected=false
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
