--- a/microservices-example/pom.xml
+++ b/microservices-example/pom.xml
@@ -19,7 +19,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
     </properties>
 
     <modules>
@@ -27,6 +27,8 @@
         <module>product-service</module>
         <module>order-service</module>
         <module>common</module>
+        <module>api-gateway</module>
+        <module>eureka-server</module>
     </modules>
 
 </project>
