--- a/microservices-example/user-service/src/main/resources/application.properties
+++ b/microservices-example/user-service/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
