--- a/microservices-example/order-service/src/main/resources/application.properties
+++ b/microservices-example/order-service/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-microservices.product-service.url=http://localhost:8081
-microservices.user-service.url=http://localhost:8082
+microservices.product-service.url=http://product-service
+microservices.user-service.url=http://user-service
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
